Catologo con filtro responsive

--- a/flask_app/static/css/all.css
+++ b/flask_app/static/css/all.css
@@ -8441,6 +8441,10 @@ textarea.form-control-lg {
   overflow: auto;
   position: relative; }
 
+@media (max-width: 991px) {
+  .filterBx {
+    height: 100%; } }
+
 .applyFilters {
   position: sticky;
   top: -25px;
