--- a/flask_app/static/css/styles.css
+++ b/flask_app/static/css/styles.css
@@ -467,3 +467,77 @@ input[type="range"]:active::-webkit-slider-thumb {
     /* height is 2x line-height, so two lines will display */
     overflow: hidden;
 }
+
+.commentBx img {
+    border-radius: 50%;
+    width: 35px;
+}
+
+.commentBx .imageReview {
+    border-radius: 0;
+    width: 88px;
+}
+
+.commentBxTitle {
+    font-weight: 500;
+}
+
+.commentBxDate {
+    font-size: 15px;
+}
+
+.commentBxMsg {
+    font-size: 14px;
+}
+
+
+/** Star Rating **/
+
+.star-widget {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+}
+
+.star-widget input {
+    display: none;
+}
+
+.star-widget label {
+    font-size: 40px;
+    color: #444;
+    padding: 2px;
+    transition: all 0.2s ease;
+}
+
+.star-widget input:not(:checked)~label:hover,
+.star-widget input:not(:checked)~label:hover~label {
+    color: #fd4;
+}
+
+.star-widget input:checked~label {
+    color: #fd4;
+}
+
+#rate-1:checked~form header:before {
+    content: "I just hate it ";
+}
+
+#rate-2:checked~form header:before {
+    content: "I don't like it ";
+}
+
+#rate-3:checked~form header:before {
+    content: "It is awesome ";
+}
+
+#rate-4:checked~form header:before {
+    content: "I just like it ";
+}
+
+#rate-5:checked~form header:before {
+    content: "I just love it ";
+}
+
+
+/** Star Rating **/
