Multiple input view review

--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -816,7 +816,12 @@
                 >Subir foto:</label
               >
               <div class="input-group">
-                <input type="file" class="form-control" id="fileUpload" />
+                <input
+                  type="file"
+                  class="form-control"
+                  id="fileUpload"
+                  multiple
+                />
               </div>
             </div>
             <div class="modal-footer d-flex flex-column justify-content-center">
