Edit User Ok and classify new business

--- a/flask_app/static/css/all.css
+++ b/flask_app/static/css/all.css
@@ -8708,3 +8708,12 @@ input[type="range"]:active::-webkit-slider-thumb {
   content: "I just love it "; }
 
 /** Star Rating **/
+.newInput {
+  display: none; }
+
+.newInput.active {
+  display: block; }
+
+.imgProfile {
+  width: 100px;
+  border-radius: 50%; }
