--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -245,13 +245,18 @@
         <ul class="navbar-nav my-2 my-lg-0 ms-auto">
             {% if userSession != "" %}
             <li class="nav-item mx-3 align-items-center d-flex flex-column flex-lg-row align-items-center">
-                <div class="my-1 d-flex align-items-center">
-                    <h6 class="text-dark welcomeMsg my-0 mx-3">
-                        Bienvenido {{userSession["first_name"]}}
-                    </h6>
-                </div>
-                <a class="btn btn-sm btn-secondary text-light" href="/logout">Salir</a
+                <div class="dropdown d-flex flex-column align-items-center my-2 my-lg-0">
+                    <a class="btn btn-sm btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Mi cuenta
+            </a>
+
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <a class="dropdown-item" href="/cuenta">Configurar</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/logout">Cerrar Sesión</a
               >
+            </div>
+          </div>
             </li>
             {% else %}
             <li
@@ -287,6 +292,8 @@
           </div>
           <div class="col-lg-6 p-3">
             <h3>Rumbero</h3>
+
+            {% if emprendimiento.categoria != "None" %}
             <div
               class="mt-3 d-flex justify-content-between align-items-center text-yellowstar"
             >
@@ -306,6 +313,8 @@
                 ><i class="bi bi-heart starIcon text-dark"></i
               ></span>
             </div>
+            {% endif %}
+
             <div class="my-2">
               ¡Para todos los rumberos que lleven la salsa en la piel! Ropa
               salsera del Perú Hecho en algodón peruano Envíos gratis a todo el
@@ -325,9 +334,26 @@
               <i class="bi bi-whatsapp starIcon h4 mx-2"></i>
               <span>922 774 566</span>
             </div>
+
+            {% if emprendimiento.categoria == "None" %}
+            <div class="my-4 bg-primary p-3 text-light">
+              <p>
+                Este emprendimiento aún no ha sido categorizado. Ayúdanos a
+                clasificarlo y que forme parte de la comunidad de EmprendeLand
+              </p>
+              <a
+                class="btn btn-altprimary"
+                href="#"
+                data-bs-toggle="modal"
+                data-bs-target="#clasificar"
+                >Clasificar</a
+              >
+            </div>
+            {% endif %}
           </div>
         </div>
 
+        {% if emprendimiento.categoria != "None" %}
         <div class="row py-3">
           <div class="col-lg-3 py-2">
             <h4>Opiniones de usuarios</h4>
@@ -343,39 +369,39 @@
             <div class="d-flex flex-column">
               <div class="d-flex align-items-center my-2">
                 <a class="" style="min-width: 90px">5 estrellas</a>
-                <div class="progress flex-grow-1 mx-2">
-                    <div class="progress-bar" role="progressbar" style="width: 67%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-                <a class="" style="cursor: pointer">67%</a>
-                </div>
-                <div class="d-flex align-items-center my-2">
-                    <a class="" style="min-width: 90px">4 estrellas</a>
-                    <div class="progress flex-grow-1 mx-2">
-                        <div class="progress-bar" role="progressbar" style="width: 14%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress flex-grow-1 mx-2">
+                            <div class="progress-bar" role="progressbar" style="width: 67%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <a class="" style="cursor: pointer">67%</a>
                     </div>
-                    <a class="" style="cursor: pointer">14%</a>
-                </div>
-                <div class="d-flex align-items-center my-2">
-                    <a class="" style="min-width: 90px">3 estrellas</a>
-                    <div class="progress flex-grow-1 mx-2">
-                        <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="d-flex align-items-center my-2">
+                        <a class="" style="min-width: 90px">4 estrellas</a>
+                        <div class="progress flex-grow-1 mx-2">
+                            <div class="progress-bar" role="progressbar" style="width: 14%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <a class="" style="cursor: pointer">14%</a>
                     </div>
-                    <a class="" style="cursor: pointer">5%</a>
-                </div>
-                <div class="d-flex align-items-center my-2">
-                    <a class="" style="min-width: 90px">2 estrellas</a>
-                    <div class="progress flex-grow-1 mx-2">
-                        <div class="progress-bar" role="progressbar" style="width: 6%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="d-flex align-items-center my-2">
+                        <a class="" style="min-width: 90px">3 estrellas</a>
+                        <div class="progress flex-grow-1 mx-2">
+                            <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <a class="" style="cursor: pointer">5%</a>
                     </div>
-                    <a class="" style="cursor: pointer">6%</a>
-                </div>
-                <div class="d-flex align-items-center my-2">
-                    <a class="" style="min-width: 90px">1 estrellas</a>
-                    <div class="progress flex-grow-1 mx-2">
-                        <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="d-flex align-items-center my-2">
+                        <a class="" style="min-width: 90px">2 estrellas</a>
+                        <div class="progress flex-grow-1 mx-2">
+                            <div class="progress-bar" role="progressbar" style="width: 6%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <a class="" style="cursor: pointer">6%</a>
                     </div>
-                    <a class="" style="cursor: pointer">7%</a>
-                </div>
+                    <div class="d-flex align-items-center my-2">
+                        <a class="" style="min-width: 90px">1 estrellas</a>
+                        <div class="progress flex-grow-1 mx-2">
+                            <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <a class="" style="cursor: pointer">7%</a>
+                    </div>
                 </div>
                 {% if userSession != "" %}
                 <a class="btn btn-altprimary text-light w-100 my-3" href="#" data-bs-toggle="modal" data-bs-target="#review">Escribir mi opinión</a
@@ -403,7 +429,7 @@
                 />
                 <span class="mx-2">Carlos San Juan</span>
               </div>
-              <div class="d-flex flex-column flex-lg-row align-items-center">
+              <div class="d-flex flex-column flex-lg-row align-items-lg-center">
                 <div class="d-flex text-yellowstar my-2">
                   <i class="bi bi-star-fill mx-1 starIcon"></i
                   ><i class="bi bi-star mx-1 starIcon"></i
@@ -439,7 +465,7 @@
                 <a class="btn btn-tertiary text-dark px-4" href="#"
                   >Útil <i class="bi bi-hand-thumbs-up starIcon"></i
                 ></a>
-                <a class="mx-3 border-start border-1 border-dark px-3">Informar de un abuso</a
+                <a class="mx-3 border-start border-1 border-dark px-3" data-bs-toggle="modal" data-bs-target="#report">Informar de un abuso</a
                 >
               </div>
             </div>
@@ -453,7 +479,7 @@
                 />
                 <span class="mx-2">Mateo Fernandez</span>
               </div>
-              <div class="d-flex flex-column flex-lg-row align-items-center">
+              <div class="d-flex flex-column flex-lg-row align-items-lg-center">
                 <div class="d-flex text-yellowstar my-2">
                   <i class="bi bi-star-fill mx-1 starIcon"></i
                   ><i class="bi bi-star-fill mx-1 starIcon"></i
@@ -495,12 +521,13 @@
                 <a class="btn btn-tertiary text-dark px-4" href="#"
                   >Útil <i class="bi bi-hand-thumbs-up starIcon"></i
                 ></a>
-                <a class="mx-3 border-start border-1 border-dark px-3">Informar de un abuso</a
+                <a class="mx-3 border-start border-1 border-dark px-3" data-bs-toggle="modal" data-bs-target="#report">Informar de un abuso</a
                 >
               </div>
             </div>
           </div>
         </div>
+        {% endif %}
       </div>
     </section>
 
@@ -827,6 +854,172 @@
             <div class="modal-footer d-flex flex-column justify-content-center">
               <button type="submit" class="btn btn-altdark text-light">
                 Publicar Comentario
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="modal fade"
+      id="report"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <form action="/report" method="post" novalidate id="reportForm">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">
+                Informar de un abuso
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div
+                class="errorLogin bg-warning text-light rounded-3 text-center"
+              ></div>
+              <p class="mb-1">
+                Si este contenido te parece inadecuado y piensas que debería
+                eliminarse del sitio EmprendeLand, comunícanoslo al hacer clic
+                en el siguiente botón.
+              </p>
+
+              <label for="motivo" class="form-label my-0">Motivo:</label>
+              <textarea
+                class="form-control"
+                name="motivo"
+                id="motivo"
+                cols="30"
+                rows="4"
+              ></textarea>
+            </div>
+            <div class="modal-footer d-flex flex-column justify-content-center">
+              <button type="submit" class="btn btn-altdark text-light">
+                Reportar
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="modal fade"
+      id="clasificar"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <form
+            action="/clasificar"
+            method="post"
+            novalidate
+            id="clasificarForm"
+          >
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Clasificar</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div
+                class="errorLogin bg-warning text-light rounded-3 text-center"
+              ></div>
+
+              <p class="mb-1">
+                Elige la categoría y subcategoría correspondiente, en caso de no
+                encontrar una existente, marca la casilla para crear una nueva
+              </p>
+
+              <label for="categoria" class="form-label my-2">Categoria:</label>
+              <select class="form-select" name="categoria" id="categoria">
+                <option value="0" selected>-- Seleccione categoría --</option>
+                <option value="1">Categoría 1</option>
+                <option value="2">Categoría 2</option>
+                <option value="3">Categoría 3</option>
+              </select>
+
+              <label for="subcategoria" class="form-label my-2"
+                >Subcategoría:</label
+              >
+              <select class="form-select" name="subcategoria" id="subcategoria">
+                <option value="0" selected>
+                  -- Seleccione subcategoría --
+                </option>
+                <option value="1">Subcategoría 1</option>
+                <option value="2">Subcategoría 2</option>
+                <option value="3">Subcategoría 3</option>
+              </select>
+
+              <div class="my-2">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  value=""
+                  id="categoriaCheckBx"
+                  onchange="checkNewCategory(this)"
+                />
+                <label class="form-check-label" for="flexCheckDefault">
+                  ¿No encuentras la categoría?
+                </label>
+
+                <div class="newInput">
+                  <label for="nuevaCategoria" class="form-label my-2"
+                    >Nueva categoría</label
+                  >
+                  <input
+                    type="text"
+                    name="nuevaCategoria"
+                    class="form-control"
+                    id="nuevaCategoria"
+                  />
+
+                  <div class="my-2">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="subcategoriaCheckBx"
+                      onchange="checkNewSubcategory(this)"
+                    />
+                    <label class="form-check-label" for="flexCheckDefault">
+                      ¿Tiene subcategoría?
+                    </label>
+                    <p class="mb-0">
+                      De no añadir, se creará en la subcategoría "General"
+                    </p>
+                  </div>
+                  <div class="newInput">
+                    <label for="nuevaSubcategoria" class="form-label mb-2"
+                      >Nueva subcategoría</label
+                    >
+                    <input
+                      type="text"
+                      name="nuevaSubcategoria"
+                      class="form-control"
+                      id="nuevaSubcategoria"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer d-flex flex-column justify-content-center">
+              <button type="submit" class="btn btn-altdark text-light">
+                Clasificar
               </button>
             </div>
           </form>
