--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -121,21 +121,27 @@
           </div>
           <div class="col-md-8 col-lg-8">
             <div class="row justify-content-evenly text-light g-4">
-              <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome">
+              <div
+                class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome"
+              >
                 <img
                   class="img-fluid"
                   src="{{ url_for('static', filename='images/burgers.svg') }}"
                 />
                 <h5 class="text-center my-3">Comida</h5>
               </div>
-              <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome">
+              <div
+                class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome"
+              >
                 <img
                   class="img-fluid"
                   src="{{ url_for('static', filename='images/mascotas.svg') }}"
                 />
                 <h5 class="text-center my-3">Mascotas</h5>
               </div>
-              <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome">
+              <div
+                class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome"
+              >
                 <img
                   class="img-fluid"
                   src="{{ url_for('static', filename='images/gifts.svg') }}"
@@ -277,34 +283,58 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="login" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div
+      class="modal fade"
+      id="login"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
       <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-              <form action="/login" method="post" novalidate id="loginForm">
-                  <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Ingresar</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                      <div class="errorLogin bg-warning text-light rounded-3 text-center"></div>
-                      <label for="email" class="form-label">Correo</label>
-                      <input type="email" name="email" class="form-control" />
-                      <label for="password" class="form-label">Contraseña:</label>
-                      <input type="password" name="password" class="form-control" />
-                  </div>
-                  <div class="modal-footer d-flex flex-column justify-content-center">
-                      <button type="submit" class="btn btn-altdark text-light">
-              Ingresar
-            </button>
-                      <p class="mt-3">¿No tiene una cuenta? <a href="#" data-bs-toggle="modal" data-bs-target="#register">Registrese</a> </p>
+        <div class="modal-content">
+          <form action="/login" method="post" novalidate id="loginForm">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Ingresar</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div
+                class="errorLogin bg-warning text-light rounded-3 text-center"
+              ></div>
+              <label for="email" class="form-label">Correo</label>
+              <input type="email" name="email" class="form-control" />
+              <label for="password" class="form-label">Contraseña:</label>
+              <input type="password" name="password" class="form-control" />
+            </div>
+            <div class="modal-footer d-flex flex-column justify-content-center">
+              <button type="submit" class="btn btn-altdark text-light">
+                Ingresar
+              </button>
+              <p class="mt-3">
+                ¿No tiene una cuenta?
+                <a href="#" data-bs-toggle="modal" data-bs-target="#register"
+                  >Registrese</a
+                >
+              </p>
+            </div>
+          </form>
         </div>
-        </form>
-        </div>
-        </div>
-        </div>
+      </div>
+    </div>
 
-        <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      type="text/javascript"
+      src="{{ url_for('static', filename='js/script.js') }}"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
