List, update and delete users at Admin dashboard

--- a/flask_app/static/css/all.css
+++ b/flask_app/static/css/all.css
@@ -8717,3 +8717,6 @@ input[type="range"]:active::-webkit-slider-thumb {
 .imgProfile {
   width: 100px;
   border-radius: 50%; }
+
+.menuProfileOpt {
+  cursor: pointer; }
