--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -247,22 +247,16 @@
                 </a>
 
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item" href="/cuenta">Configurar</a>
+                        {% if userSession.isAdmin == false %}
+                        <a class="dropdown-item" href="/cuenta">Configurar</a> {% else %} <a class="dropdown-item" href="/admin">Admin</a> {% endif %}
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/logout">Cerrar Sesión</a
-                  >
+                        <a class="dropdown-item" href="/logout">Cerrar Sesión</a>
+                    </div>
                 </div>
-              </div>
             </li>
             {% else %}
-            <li
-              class="nav-item mx-3 align-items-center d-flex flex-column flex-lg-row align-items-center"
-            >
-              <a
-                class="btn btn-sm btn-altdark text-light"
-                data-bs-toggle="modal"
-                data-bs-target="#login"
-                >Ingrese</a
+            <li class="nav-item mx-3 align-items-center d-flex flex-column flex-lg-row align-items-center">
+                <a class="btn btn-sm btn-altdark text-light" data-bs-toggle="modal" data-bs-target="#login">Ingrese</a
               >
             </li>
             {% endif %}
@@ -291,18 +285,18 @@
           >
             Filtros
           </a>
-                        <div class="col-6 col-lg-3 ms-auto">
-                            <select class="form-select shadow-none ms-auto" aria-label="Default select example">
+                <div class="col-6 col-lg-3 ms-auto">
+                    <select class="form-select shadow-none ms-auto" aria-label="Default select example">
               <option value="menor">Más comentados</option>
               <option value="mayor">Más followers</option>
               <option value="recomendados" selected>Recomendados</option>
             </select>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="d-none d-lg-block col-lg-3">
-                            <div class="bg-graytheme p-4 my-3">
-                                <span class="h4 border-start border-5 border-altprimary px-2">CARGADORES</span
+                </div>
+                </div>
+                <div class="row">
+                    <div class="d-none d-lg-block col-lg-3">
+                        <div class="bg-graytheme p-4 my-3">
+                            <span class="h4 border-start border-5 border-altprimary px-2">CARGADORES</span
               >
             </div>
             <div class="bg-graytheme p-4 my-3 filterBx">
@@ -318,55 +312,55 @@
               <div class="wrapper-slider">
                 <div class="values-slider">
                   <span id="range1"> 0 </span>
-                                <span> &dash; </span>
-                                <span id="range2"> 5 </span>
-                                <span class="mx-1"><i class="bi bi-star-fill starIcon"></i
+                            <span> &dash; </span>
+                            <span id="range2"> 5 </span>
+                            <span class="mx-1"><i class="bi bi-star-fill starIcon"></i
                   ></span>
-                            </div>
-                            <div class="container-slider">
-                                <div class="slider-track"></div>
-                                <input type="range" min="0" max="500" value="0" id="slider-1" oninput="slideOne()" />
-                                <input type="range" min="0" max="500" value="500" id="slider-2" oninput="slideTwo()" />
-                            </div>
                         </div>
-                        <div class="d-flex my-4">
-                            <i class="bi bi-sliders"></i>
-                            <div class="h6 mb-0 pt-1 mx-2">Filtro Reviews</div>
-                        </div>
-                        <div class="wrapper-slider">
-                            <div class="values-slider">
-                                <span id="range3"> 0 </span>
-                                <span> &dash; </span>
-                                <span id="range4"> 5 </span>
-                                <span class="mx-1"><i class="bi bi-chat-left-quote-fill starIcon"></i
-                  ></span>
-                            </div>
-                            <div class="container-slider">
-                                <div class="slider-track"></div>
-                                <input type="range" min="0" max="500" value="0" id="slider-3" oninput="slide3()" />
-                                <input type="range" min="0" max="500" value="200" id="slider-4" oninput="slide4()" />
-                            </div>
-                        </div>
-
-                        <div class="d-flex my-4">
-                            <i class="bi bi-sliders"></i>
-                            <div class="h6 mb-0 pt-1 mx-2">Filtro Followers</div>
-                        </div>
-                        <div class="wrapper-slider">
-                            <div class="values-slider">
-                                <span id="range5"> 0 </span>
-                                <span> &dash; </span>
-                                <span id="range6"> 5 </span>
-                                <span class="mx-1"><i class="bi bi-people-fill starIcon"></i
-                  ></span>
-                            </div>
-                            <div class="container-slider">
-                                <div class="slider-track"></div>
-                                <input type="range" min="0" max="20000" value="0" id="slider-5" oninput="slide5()" />
-                                <input type="range" min="0" max="20000" value="5700" id="slider-6" oninput="slide6()" />
-                            </div>
+                        <div class="container-slider">
+                            <div class="slider-track"></div>
+                            <input type="range" min="0" max="500" value="0" id="slider-1" oninput="slideOne()" />
+                            <input type="range" min="0" max="500" value="500" id="slider-2" oninput="slideTwo()" />
                         </div>
                     </div>
+                    <div class="d-flex my-4">
+                        <i class="bi bi-sliders"></i>
+                        <div class="h6 mb-0 pt-1 mx-2">Filtro Reviews</div>
+                    </div>
+                    <div class="wrapper-slider">
+                        <div class="values-slider">
+                            <span id="range3"> 0 </span>
+                            <span> &dash; </span>
+                            <span id="range4"> 5 </span>
+                            <span class="mx-1"><i class="bi bi-chat-left-quote-fill starIcon"></i
+                  ></span>
+                        </div>
+                        <div class="container-slider">
+                            <div class="slider-track"></div>
+                            <input type="range" min="0" max="500" value="0" id="slider-3" oninput="slide3()" />
+                            <input type="range" min="0" max="500" value="200" id="slider-4" oninput="slide4()" />
+                        </div>
+                    </div>
+
+                    <div class="d-flex my-4">
+                        <i class="bi bi-sliders"></i>
+                        <div class="h6 mb-0 pt-1 mx-2">Filtro Followers</div>
+                    </div>
+                    <div class="wrapper-slider">
+                        <div class="values-slider">
+                            <span id="range5"> 0 </span>
+                            <span> &dash; </span>
+                            <span id="range6"> 5 </span>
+                            <span class="mx-1"><i class="bi bi-people-fill starIcon"></i
+                  ></span>
+                        </div>
+                        <div class="container-slider">
+                            <div class="slider-track"></div>
+                            <input type="range" min="0" max="20000" value="0" id="slider-5" oninput="slide5()" />
+                            <input type="range" min="0" max="20000" value="5700" id="slider-6" oninput="slide6()" />
+                        </div>
+                    </div>
+                </div>
                 </div>
 
                 <div class="col-12 col-lg-9">
