--- a/flask_app/static/css/styles.css
+++ b/flask_app/static/css/styles.css
@@ -554,3 +554,7 @@ input[type="range"]:active::-webkit-slider-thumb {
     width: 100px;
     border-radius: 50%;
 }
+
+.menuProfileOpt {
+    cursor: pointer;
+}
