--- a/flask_app/templates/admin.html
+++ b/flask_app/templates/admin.html
@@ -283,9 +283,17 @@
           <div class="profileMenu col-lg-4 d-flex flex-column align-items-center">
             <div class="bg-graytheme w-100 d-flex flex-column align-items-center p-3">
               <h4 class="mb-3 helloBx">¡Hola {{userSession["first_name"]}} {{userSession["last_name"]}}!</h4>
+
+              {% if userSession.isAdmin != true %}
+              <h4>Admin</h4>
+              {% endif %}
+
             <img class="imgProfile" src="https://images-na.ssl-images-amazon.com/images/S/amazon-avatars-global/default._CR0,0,1024,1024_SX460_.png" alt="">
-            </div>            
-            <h6 class="bg-graytheme p-3 my-3 w-100 menuProfileOpt"><i class="bi bi-person h2 starIcon"></i><span class="mx-3">Mi Perfil</span></h6>
+            </div>
+            <h6 class="bg-graytheme p-3 my-3 w-100 menuProfileOpt"><i class="bi bi-people h2 starIcon"></i><span class="mx-3">Usuarios</span></h6>
+            <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-tag h2 starIcon"></i><span class="mx-3">Solicitud Categorias</span></h6>
+            <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-flag h2 starIcon"></i><span class="mx-3">Reporte Reviews</span></h6>
+            <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-person h2 starIcon"></i><span class="mx-3">Mi Perfil</span></h6>
             <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-shield-lock h2 starIcon"></i><span class="mx-3">Mi Contraseña</span></h5>
             <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-heart h2 starIcon"></i><span class="mx-3">Mis Favoritos</span></h5>
             <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-box-arrow-right h2 starIcon"></i><span class="mx-3">Cerrar Sesión</span></h5>
