--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -247,26 +247,20 @@
             <li class="nav-item mx-3 align-items-center d-flex flex-column flex-lg-row align-items-center">
                 <div class="dropdown d-flex flex-column align-items-center my-2 my-lg-0">
                     <a class="btn btn-sm btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Mi cuenta
-            </a>
+                  Mi cuenta
+                </a>
 
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item" href="/cuenta">Configurar</a>
+                        {% if userSession.isAdmin == false %}
+                        <a class="dropdown-item" href="/cuenta">Configurar</a> {% else %} <a class="dropdown-item" href="/admin">Admin</a> {% endif %}
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/logout">Cerrar Sesión</a
-              >
-            </div>
-          </div>
+                        <a class="dropdown-item" href="/logout">Cerrar Sesión</a>
+                    </div>
+                </div>
             </li>
             {% else %}
-            <li
-              class="nav-item mx-3 align-items-center d-flex flex-column flex-lg-row align-items-center"
-            >
-              <a
-                class="btn btn-sm btn-altdark text-light"
-                data-bs-toggle="modal"
-                data-bs-target="#login"
-                >Ingrese</a
+            <li class="nav-item mx-3 align-items-center d-flex flex-column flex-lg-row align-items-center">
+                <a class="btn btn-sm btn-altdark text-light" data-bs-toggle="modal" data-bs-target="#login">Ingrese</a
               >
             </li>
             {% endif %}
@@ -369,39 +363,39 @@
             <div class="d-flex flex-column">
               <div class="d-flex align-items-center my-2">
                 <a class="" style="min-width: 90px">5 estrellas</a>
-                        <div class="progress flex-grow-1 mx-2">
-                            <div class="progress-bar" role="progressbar" style="width: 67%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <a class="" style="cursor: pointer">67%</a>
+                <div class="progress flex-grow-1 mx-2">
+                    <div class="progress-bar" role="progressbar" style="width: 67%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+                <a class="" style="cursor: pointer">67%</a>
+                </div>
+                <div class="d-flex align-items-center my-2">
+                    <a class="" style="min-width: 90px">4 estrellas</a>
+                    <div class="progress flex-grow-1 mx-2">
+                        <div class="progress-bar" role="progressbar" style="width: 14%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <div class="d-flex align-items-center my-2">
-                        <a class="" style="min-width: 90px">4 estrellas</a>
-                        <div class="progress flex-grow-1 mx-2">
-                            <div class="progress-bar" role="progressbar" style="width: 14%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <a class="" style="cursor: pointer">14%</a>
+                    <a class="" style="cursor: pointer">14%</a>
+                </div>
+                <div class="d-flex align-items-center my-2">
+                    <a class="" style="min-width: 90px">3 estrellas</a>
+                    <div class="progress flex-grow-1 mx-2">
+                        <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <div class="d-flex align-items-center my-2">
-                        <a class="" style="min-width: 90px">3 estrellas</a>
-                        <div class="progress flex-grow-1 mx-2">
-                            <div class="progress-bar" role="progressbar" style="width: 5%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <a class="" style="cursor: pointer">5%</a>
+                    <a class="" style="cursor: pointer">5%</a>
+                </div>
+                <div class="d-flex align-items-center my-2">
+                    <a class="" style="min-width: 90px">2 estrellas</a>
+                    <div class="progress flex-grow-1 mx-2">
+                        <div class="progress-bar" role="progressbar" style="width: 6%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <div class="d-flex align-items-center my-2">
-                        <a class="" style="min-width: 90px">2 estrellas</a>
-                        <div class="progress flex-grow-1 mx-2">
-                            <div class="progress-bar" role="progressbar" style="width: 6%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <a class="" style="cursor: pointer">6%</a>
+                    <a class="" style="cursor: pointer">6%</a>
+                </div>
+                <div class="d-flex align-items-center my-2">
+                    <a class="" style="min-width: 90px">1 estrellas</a>
+                    <div class="progress flex-grow-1 mx-2">
+                        <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <div class="d-flex align-items-center my-2">
-                        <a class="" style="min-width: 90px">1 estrellas</a>
-                        <div class="progress flex-grow-1 mx-2">
-                            <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <a class="" style="cursor: pointer">7%</a>
-                    </div>
+                    <a class="" style="cursor: pointer">7%</a>
+                </div>
                 </div>
                 {% if userSession != "" %}
                 <a class="btn btn-altprimary text-light w-100 my-3" href="#" data-bs-toggle="modal" data-bs-target="#review">Escribir mi opinión</a
