Complete user CRUD, added politic and privacy route

--- a/flask_app/templates/cuenta.html
+++ b/flask_app/templates/cuenta.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <h3 class="text-dark mb-0">
-                <a class="text-reset text-decoration-none" href="/">Emprende<span class="text-tertiary">Land</span></a
+                <a class="text-reset text-decoration-none" href="/">Emprende<span class="text-tertiary">Advisor</span></a
           >
         </h3>
         <button
@@ -308,7 +308,7 @@
     <section class="footer">
       <div class="row container">
         <div class="col-sm-4 text-light text-center">
-          <h4 class="my-4">Emprende<span class="text-tertiary">Land</span></h4>
+          <h4 class="my-4">Emprende<span class="text-tertiary">Advisor</span></h4>
           <h5 class="mb-4">Libro de reclamaciones</h5>
           <img
             class="img-fluid"
@@ -330,7 +330,11 @@
           <h5 class="text-tertiary my-4">Conocenos</h5>
           <h5>Acerca de nosotros</h5>
           <h5>Preguntas frecuentes</h5>
-          <h5>Pólitica de privacidad</h5>
+          <h5>
+            <a class="text-reset text-decoration-none" href="/politica"
+              >Pólitica de privacidad</a
+            >
+          </h5>
         </div>
         <div class="col-sm-4 text-light text-center">
           <h5 class="text-tertiary my-4">Categorías</h5>
