--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <h3 class="text-dark mb-0">
-                <a class="text-reset text-decoration-none" href="/">Emprende<span class="text-tertiary">Land</span></a
+                <a class="text-reset text-decoration-none" href="/">Emprende<span class="text-tertiary">Advisor</span></a
           >
         </h3>
         <button
@@ -612,7 +612,9 @@
                 <section class="footer">
                     <div class="row container">
                         <div class="col-sm-4 text-light text-center">
-                            <h4 class="my-4">Emprende<span class="text-tertiary">Land</span></h4>
+                            <h4 class="my-4">
+                                Emprende<span class="text-tertiary">Advisor</span>
+                            </h4>
                             <h5 class="mb-4">Libro de reclamaciones</h5>
                             <img class="img-fluid" style="filter: invert(1)" src="{{ url_for('static', filename='images/facebook.svg') }}" />
                             <img class="img-fluid" style="filter: invert(1)" src="{{ url_for('static', filename='images/instagram.svg') }}" />
@@ -622,38 +624,80 @@
                             <h5 class="text-tertiary my-4">Conocenos</h5>
                             <h5>Acerca de nosotros</h5>
                             <h5>Preguntas frecuentes</h5>
-                            <h5>Pólitica de privacidad</h5>
-                        </div>
-                        <div class="col-sm-4 text-light text-center">
-                            <h5 class="text-tertiary my-4">Categorías</h5>
-                            <h5>Postres</h5>
-                            <h5>Joyería</h5>
-                            <h5>Ropa mujer</h5>
-                            <h5>Más categorías</h5>
-                        </div>
-                    </div>
-                </section>
+                            <h5>
+                                <a class="text-reset text-decoration-none" href="/politica">Pólitica de privacidad</a
+            >
+          </h5>
+        </div>
+        <div class="col-sm-4 text-light text-center">
+          <h5 class="text-tertiary my-4">Categorías</h5>
+          <h5>Postres</h5>
+          <h5>Joyería</h5>
+          <h5>Ropa mujer</h5>
+          <h5>Más categorías</h5>
+        </div>
+      </div>
+    </section>
 
-                <!-- Modal -->
-                <div class="modal fade" id="register" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-content">
-                            <form action="/register/user" method="post" id="registerForm" novalidate>
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Registrar</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="errorRegister bg-warning text-light rounded-3 mb-3 px-3"></div>
-                                    <label for="first_name" class="form-label">Nombre:</label>
-                                    <input type="text" name="first_name" class="form-control" id="first_name" />
-                                    <label for="last_name" class="form-label">Apellidos:</label>
-                                    <input type="text" name="last_name" class="form-control" id="last_name" />
-                                    <label for="email" class="form-label">Correo:</label>
-                                    <input type="email" name="email" class="form-control" id="email" />
-                                    <label for="password" class="form-label">Contraseña:</label>
-                                    <input type="password" name="password" class="form-control" id="password" />
-                                    <label for="repeat_password" class="form-label">Repita contraseña:</label
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="register"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <form
+            action="/register/user"
+            method="post"
+            id="registerForm"
+            novalidate
+          >
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Registrar</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div
+                class="errorRegister bg-warning text-light rounded-3 mb-3 px-3"
+              ></div>
+              <label for="first_name" class="form-label">Nombre:</label>
+              <input
+                type="text"
+                name="first_name"
+                class="form-control"
+                id="first_name"
+              />
+              <label for="last_name" class="form-label">Apellidos:</label>
+              <input
+                type="text"
+                name="last_name"
+                class="form-control"
+                id="last_name"
+              />
+              <label for="email" class="form-label">Correo:</label>
+              <input
+                type="email"
+                name="email"
+                class="form-control"
+                id="email"
+              />
+              <label for="password" class="form-label">Contraseña:</label>
+              <input
+                type="password"
+                name="password"
+                class="form-control"
+                id="password"
+              />
+              <label for="repeat_password" class="form-label"
+                >Repita contraseña:</label
               >
               <input
                 type="password"
@@ -676,39 +720,53 @@
                     >Terminos y Condiciones</span
                   >
                 </label>
-                                </div>
-                                <button type="submit" class="btn btn-altdark text-light">
+              </div>
+              <button type="submit" class="btn btn-altdark text-light">
                 Registrar
               </button>
-                        </div>
-                        </form>
-                    </div>
-                </div>
-                </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
 
-                <!-- Modal -->
-                <div class="modal fade" id="login" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-content">
-                            <form action="/login" method="post" novalidate id="loginForm">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Ingresar</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <div class="errorLogin bg-warning text-light rounded-3 text-center"></div>
-                                    <label for="email" class="form-label">Correo</label>
-                                    <input type="email" name="email" class="form-control" />
-                                    <label for="password" class="form-label">Contraseña:</label>
-                                    <input type="password" name="password" class="form-control" />
-                                </div>
-                                <div class="modal-footer d-flex flex-column justify-content-center">
-                                    <button type="submit" class="btn btn-altdark text-light">
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="login"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <form action="/login" method="post" novalidate id="loginForm">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Ingresar</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div
+                class="errorLogin bg-warning text-light rounded-3 text-center"
+              ></div>
+              <label for="email" class="form-label">Correo</label>
+              <input type="email" name="email" class="form-control" />
+              <label for="password" class="form-label">Contraseña:</label>
+              <input type="password" name="password" class="form-control" />
+            </div>
+            <div class="modal-footer d-flex flex-column justify-content-center">
+              <button type="submit" class="btn btn-altdark text-light">
                 Ingresar
               </button>
-                                    <p class="mt-3">
-                                        ¿No tiene una cuenta?
-                                        <a href="#" data-bs-toggle="modal" data-bs-target="#register">Registrese</a
+              <p class="mt-3">
+                ¿No tiene una cuenta?
+                <a href="#" data-bs-toggle="modal" data-bs-target="#register"
+                  >Registrese</a
                 >
               </p>
             </div>
