--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <h3 class="text-dark mb-0">
-                <a class="text-reset text-decoration-none" href="/">Emprende<span class="text-tertiary">Land</span></a
+                <a class="text-reset text-decoration-none" href="/">Emprende<span class="text-tertiary">Advisor</span></a
           >
         </h3>
         <button
@@ -333,7 +333,8 @@
             <div class="my-4 bg-primary p-3 text-light">
               <p>
                 Este emprendimiento aún no ha sido categorizado. Ayúdanos a
-                clasificarlo y que forme parte de la comunidad de EmprendeLand
+                clasificarlo y que forme parte de la comunidad de
+                EmprendeAdvisor
               </p>
               <a
                 class="btn btn-altprimary"
@@ -528,7 +529,9 @@
     <section class="footer">
       <div class="row container">
         <div class="col-sm-4 text-light text-center">
-          <h4 class="my-4">Emprende<span class="text-tertiary">Land</span></h4>
+          <h4 class="my-4">
+            Emprende<span class="text-tertiary">Advisor</span>
+          </h4>
           <h5 class="mb-4">Libro de reclamaciones</h5>
           <img
             class="img-fluid"
@@ -550,7 +553,11 @@
           <h5 class="text-tertiary my-4">Conocenos</h5>
           <h5>Acerca de nosotros</h5>
           <h5>Preguntas frecuentes</h5>
-          <h5>Pólitica de privacidad</h5>
+          <h5>
+            <a class="text-reset text-decoration-none" href="/politica"
+              >Pólitica de privacidad</a
+            >
+          </h5>
         </div>
         <div class="col-sm-4 text-light text-center">
           <h5 class="text-tertiary my-4">Categorías</h5>
@@ -882,8 +889,8 @@
               ></div>
               <p class="mb-1">
                 Si este contenido te parece inadecuado y piensas que debería
-                eliminarse del sitio EmprendeLand, comunícanoslo al hacer clic
-                en el siguiente botón.
+                eliminarse del sitio EmprendeAdvisor, comunícanoslo al hacer
+                clic en el siguiente botón.
               </p>
 
               <label for="motivo" class="form-label my-0">Motivo:</label>
