--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar homeNavbar fixed-top">
         <div class="container">
             <h3 class="text-light mb-0">
-                Emprende<span class="text-tertiary">Land</span>
+                Emprende<span class="text-tertiary">Advisor</span>
             </h3>
             <ul class="navbar-nav ms-auto my-2 align-items-center">
                 <li class="nav-item ms-auto mx-3 align-items-center d-flex align-items-center">
@@ -53,7 +53,7 @@
               <span class="text-tertiary">un mismo lugar!</span>
             </h1>
             <p class="text-light lead my-4">
-              EmprendeLand busca ser el primer directorio digital de
+              EmprendeAdvisor busca ser el primer directorio digital de
               emprendimientos del Perú
             </p>
             <button
@@ -111,7 +111,7 @@
         <div class="row align-items-center">
           <div class="text-center col-md-4 col-lg-4">
             <h3 class="text-dark">
-              Explora Emprende<span class="text-altdark">Land</span>
+              Explora Emprende<span class="text-altdark">Advisor</span>
             </h3>
             <p class="text-dark lead my-4">
               Encuentra tus emprendimientos por categorías, si no lo encuentras
@@ -157,7 +157,9 @@
     <section class="footer">
       <div class="row container">
         <div class="col-sm-4 text-light text-center">
-          <h4 class="my-4">Emprende<span class="text-tertiary">Land</span></h4>
+          <h4 class="my-4">
+            Emprende<span class="text-tertiary">Advisor</span>
+          </h4>
           <h5 class="mb-4">Libro de reclamaciones</h5>
           <img
             class="img-fluid"
@@ -179,7 +181,11 @@
           <h5 class="text-tertiary my-4">Conocenos</h5>
           <h5>Acerca de nosotros</h5>
           <h5>Preguntas frecuentes</h5>
-          <h5>Pólitica de privacidad</h5>
+          <h5>
+            <a class="text-reset text-decoration-none" href="/politica"
+              >Pólitica de privacidad</a
+            >
+          </h5>
         </div>
         <div class="col-sm-4 text-light text-center">
           <h5 class="text-tertiary my-4">Categorías</h5>
