--- a/flask_app/templates/admin.html
+++ b/flask_app/templates/admin.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <h3 class="text-dark mb-0">
-                <a class="text-reset text-decoration-none" href="/">Emprende<span class="text-tertiary">Land</span></a
+                <a class="text-reset text-decoration-none" href="/">Emprende<span class="text-tertiary">Advisor</span></a
           >
         </h3>
         <button
@@ -291,6 +291,8 @@
             <img class="imgProfile" src="https://images-na.ssl-images-amazon.com/images/S/amazon-avatars-global/default._CR0,0,1024,1024_SX460_.png" alt="">
             </div>
             <h6 class="bg-graytheme p-3 my-3 w-100 menuProfileOpt"><i class="bi bi-people h2 starIcon"></i><span class="mx-3">Usuarios</span></h6>
+            <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-shop h2 starIcon"></i><span class="mx-3">Emprendimientos</span></h6>
+            <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-card-list h2 starIcon"></i><span class="mx-3">Categorias</span></h6>
             <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-tag h2 starIcon"></i><span class="mx-3">Solicitud Categorias</span></h6>
             <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-flag h2 starIcon"></i><span class="mx-3">Reporte Reviews</span></h6>
             <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-person h2 starIcon"></i><span class="mx-3">Mi Perfil</span></h6>
@@ -316,7 +318,7 @@
     <section class="footer">
       <div class="row container">
         <div class="col-sm-4 text-light text-center">
-          <h4 class="my-4">Emprende<span class="text-tertiary">Land</span></h4>
+          <h4 class="my-4">Emprende<span class="text-tertiary">Advisor</span></h4>
           <h5 class="mb-4">Libro de reclamaciones</h5>
           <img
             class="img-fluid"
@@ -338,7 +340,11 @@
           <h5 class="text-tertiary my-4">Conocenos</h5>
           <h5>Acerca de nosotros</h5>
           <h5>Preguntas frecuentes</h5>
-          <h5>Pólitica de privacidad</h5>
+          <h5>
+            <a class="text-reset text-decoration-none" href="/politica"
+              >Pólitica de privacidad</a
+            >
+          </h5>
         </div>
         <div class="col-sm-4 text-light text-center">
           <h5 class="text-tertiary my-4">Categorías</h5>
