Add image to User object and get from the template

--- a/flask_app/templates/admin.html
+++ b/flask_app/templates/admin.html
@@ -288,7 +288,7 @@
               <h4>Admin</h4>
               {% endif %}
 
-            <img class="imgProfile" src="https://images-na.ssl-images-amazon.com/images/S/amazon-avatars-global/default._CR0,0,1024,1024_SX460_.png" alt="">
+            <img class="imgProfile" src={{userSession["image"]}} alt="">
             </div>
             <h6 class="bg-graytheme p-3 my-3 w-100 menuProfileOpt"><i class="bi bi-people h2 starIcon"></i><span class="mx-3">Usuarios</span></h6>
             <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-shop h2 starIcon"></i><span class="mx-3">Emprendimientos</span></h6>
