--- a/flask_app/templates/cuenta.html
+++ b/flask_app/templates/cuenta.html
@@ -251,9 +251,9 @@
             </a>
 
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        {% if userSession.isAdmin == false %}
-                        <a class="dropdown-item" href="/cuenta">Configurar</a> {% else %}
-                        <a class="dropdown-item" href="/admin">Admin</a> {% endif %}
+
+                        <a class="dropdown-item" href="/cuenta">Configurar</a>
+
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/logout">Cerrar Sesión</a
               >
