--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -251,7 +251,7 @@
                 </a>
 
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        {% if userSession.isAdmin == false %}
+                        {% if session["level"] != 9 %}
                         <a class="dropdown-item" href="/cuenta">Configurar</a> {% else %} <a class="dropdown-item" href="/admin">Admin</a> {% endif %}
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/logout">Cerrar Sesión</a>
