Add backend and frontend flow for block and delete users

--- a/flask_app/templates/admin.html
+++ b/flask_app/templates/admin.html
@@ -290,6 +290,7 @@
             <img class="imgProfile" src={{userSession["image"]}} alt="">
             </div>
             <h6 class="bg-graytheme p-3 my-3 w-100 menuProfileOpt"><i class="bi bi-people h2 starIcon"></i><span class="mx-3">Usuarios</span></h6>
+            <h6 class="bg-graytheme p-3 my-3 w-100 menuProfileOpt"><i class="bi bi-person-x-fill h2 starIcon"></i><span class="mx-3">Bloqueados</span></h6>
             <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-shop h2 starIcon"></i><span class="mx-3">Emprendimientos</span></h6>
             <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-card-list h2 starIcon"></i><span class="mx-3">Categorias</span></h6>
             <h6 class="bg-graytheme p-3 mb-3 w-100 menuProfileOpt"><i class="bi bi-tag h2 starIcon"></i><span class="mx-3">Solicitud Categorias</span></h6>
