Add image input for profile 11

--- a/flask_app/static/css/all.css
+++ b/flask_app/static/css/all.css
@@ -8722,6 +8722,4 @@ input[type="range"]:active::-webkit-slider-thumb {
   cursor: pointer; }
 
 #frame {
-  background-color: lightgray;
-  width: 216px;
-  height: 216px; }
+  background-color: lightgray; }
