Add image input for profile 13

--- a/flask_app/static/css/all.css
+++ b/flask_app/static/css/all.css
@@ -8723,3 +8723,6 @@ input[type="range"]:active::-webkit-slider-thumb {
 
 #frame {
   background-color: lightgray; }
+
+#btnClearImg {
+  width: fit-content; }
