--- a/flask_app/static/css/styles.css
+++ b/flask_app/static/css/styles.css
@@ -562,3 +562,7 @@ input[type="range"]:active::-webkit-slider-thumb {
 #frame {
     background-color: lightgray;
 }
+
+#btnClearImg {
+    width: fit-content;
+}
