Add image input for profile 14

--- a/flask_app/static/css/all.css
+++ b/flask_app/static/css/all.css
@@ -8724,5 +8724,5 @@ input[type="range"]:active::-webkit-slider-thumb {
 #frame {
   background-color: lightgray; }
 
-#btnClearImg {
+#deleteImgBtn {
   width: fit-content; }
