--- a/flask_app/static/css/styles.css
+++ b/flask_app/static/css/styles.css
@@ -552,6 +552,7 @@ input[type="range"]:active::-webkit-slider-thumb {
 
 .imgProfile {
     width: 100px;
+    height: 100px;
     border-radius: 50%;
 }
 
