redis 5 and instagrapi 3

--- a/flask_app/templates/emprendimiento.html
+++ b/flask_app/templates/emprendimiento.html
@@ -280,7 +280,7 @@
           <div class="col-lg-4 p-4 text-center">
             <img
               class="img-fluid"
-              src="https://www.emprendeadvisor.com/img/{{emprendimiento.profile_pic_url_hd[0]}}&{{emprendimiento.profile_pic_url_hd[1]}}"
+              src="https://www.emprendeadvisor.com/img/{{emprendimiento.url_p1}}&{{emprendimiento.url_p2}}"
               alt=""
             />
           </div>
